--- a/threejs/client/src/index.css
+++ b/threejs/client/src/index.css
@@ -43,6 +43,11 @@ html {
   @apply absolute z-10 bottom-5 right-0 left-0 w-full flex justify-center items-center flex-wrap gap-4;
 }
 
+.changeitems-container {
+  @apply absolute z-10 top-5 right-0 left-0 w-full flex justify-center items-center flex-wrap gap-4;
+}
+
+
 .aipicker-container {
   @apply absolute left-full ml-3 glassmorphism p-3 w-[195px] h-[220px] rounded-md flex flex-col gap-4;
 }
